<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/call_list"
        android:icon="@drawable/ic_action_call_list_light"
        android:title="@string/call_list"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/download_sounds"
        android:icon="@drawable/ic_action_download_light"
        android:title="@string/download_sounds"
        app:showAsAction="always"/>

    <item
        android:id="@+id/googleMap"
        android:icon="@drawable/ic_action_map_light"
        android:title="@string/googleMap"
        app:showAsAction="always"/>


    <item
        android:id="@+id/call_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/settings" />
</menu>
